--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"multiformats": "^9.9.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
+		"react": "^18.2.0",
+		"react-bootstrap": "^2.7.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.4.5",
 		"react-scripts": "^5.0.1",
 		"styled-components": "^5.3.6",
 		"web-vitals": "^1.0.1"
